set scale and position of the model

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" desktop="true"></xr-mdl>
+<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale="1,2,1" position="2,2,2"  desktop="true"></xr-mdl>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
