preliminary dynamic editing

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,10 +4,11 @@
 </head>
 <body>
 
-<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale="1,1,1" position="2,2,2" rotation="30,80,90"  desktop="true"></xr-mdl>
+<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale=".01,.01,.01" position="0,0,0" rotation="0,0,0"  desktop="true"></xr-mdl>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
 <script src="scripts/xrloader.min.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
