--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,11 +4,16 @@
 </head>
 <body>
 
-<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale=".01,.01,.01" position="0,0,0" rotation="0,0,0"  desktop="true"></xr-mdl>
+<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale=".01,.01,.01" position="0,0,0" rotation="0,0,0" desktop="true"></xr-mdl>
 
+<div>
+    <div>
+        <div id="ha"></div>
+    </div>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
 <script src="scripts/xrloader.min.js"></script>
-<script src="scripts/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
