--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale=".005,.005,.005" position="0,0,0" rotation="0,0,0" desktop="true"></xr-mdl>
+<xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale="1,1,1" offset="0,0,3" rotation="0,0,0" desktop="true"></xr-mdl>
 
 <div>
     <div>
