--- a/example/public/index.html
+++ b/example/public/index.html
@@ -6,6 +6,8 @@
 
 <xr-mdl obj="r2-d2.obj" mtl="r2-d2.mtl" texturePath="./r2d2/" scale="1,1,1" offset="0,0,3" rotation="0,0,0" desktop="true"></xr-mdl>
 
+<h1>dank</h1>
+
 <div>
     <div>
         <div id="ha"></div>
@@ -13,7 +15,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
-<script src="scripts/ar-compositor.js"></script>
 <script src="scripts/xrloader.min.js"></script>
 <script src="index.js"></script>
 </body>
